--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="wrapper">
       <section class="container-left">
-        <h1>Easy Shopping Via Mobile</h1>
+        <h1>Compras Fáceis Via Celular</h1>
         <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
-        <button>Get Started</button>
+        <button>Iniciar</button>
       </section>
       <section class="container-right">
         <header>
-            <a>Home</a>
-            <a class="a-below-opacity">Work</a>
-            <a>About</a>
-            <a>Contact</a>
+            <a>Início</a>
+            <a class="a-below-opacity">Trabalho</a>
+            <a>Sobre</a>
+            <a>Contate-nos</a>
         </header>
        <img src="assets/Illustration-3-3.png" alt="girl-cellphone" class="main-img">
       </section>
