--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="container-left">
         <h1>Compras Fáceis Via Celular</h1>
         <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
-        <button>Iniciar</button>
+        <button>Começar</button>
       </section>
       <section class="container-right">
         <header>
