--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a>Início</a>
             <a class="a-below-opacity">Trabalho</a>
             <a>Sobre</a>
-            <a>Contate-nos</a>
+            <a>Contato</a>
         </header>
        <img src="assets/Illustration-3-3.png" alt="girl-cellphone" class="main-img">
       </section>
