--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="wrapper">
       <section class="container-left">
         <h1>Compras Fáceis Via Celular</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+        <p>Compre de forma rápida e segura. Nossa plataforma oferece uma experiência prática e eficiente, facilitando suas compras a qualquer momento.</p>
         <button>Começar</button>
       </section>
       <section class="container-right">
         <header>
             <a>Início</a>
-            <a class="a-below-opacity">Trabalho</a>
+            <a class="a-below-opacity">Produtos</a>
             <a>Sobre</a>
             <a>Contato</a>
         </header>
